kubernetes/test/app-test-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      containers:
        - name: worker
          imagePullPolicy: Always
          image: arshdauwa/worker:1.0
          command: [python3, src/worker.py]
          env:
            - name: REDIS_IP
              value: "planetarysystems-redis-service"
