kubernetes/test/app-test-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: planetarysystems-flask-service
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
  - name: flask-app
    port: 5000
    targetPort: 5000
